AWS/skills/2021-seoul/asg.tf
resource "aws_autoscaling_group" "stable" {
  name = "web-stable"
  desired_capacity   = 2
  max_size           = 2
  min_size           = 10
  vpc_zone_identifier = [ aws_subnet.private-a.id, aws_subnet.private-b.id ]
  target_group_arns = [ aws_lb_target_group.stable ]

  launch_template {
    id      = aws_launch_template.stable.id
    version = "$Latest"
  }
}

resource "aws_autoscaling_group" "test" {
  name = "web-test"
  desired_capacity   = 2
  max_size           = 2
  min_size           = 10
  vpc_zone_identifier = [ aws_subnet.private-a.id, aws_subnet.private-b.id ]
  target_group_arns = [ aws_lb_target_group.test ]

  launch_template {
    id      = aws_launch_template.test.id
    version = "$Latest"
  }
}

resource "aws_launch_template" "stable" {
  name = "web_stable_lt"
  image_id = local.ami
  instance_type = local.instance_type
  key_name = aws_key_pair.keypair.key_name

  vpc_security_group_ids = [ aws_security_group.web.id ]
  tag_specifications {
    resource_type = "instance"

    tags = {
      Name = "web-skills-ap-stable"
    }
  }

  user_data = filebase64("${path.module}/stable.sh")
}

resource "aws_launch_template" "test" {
  name = "web_test_lt"
  image_id = local.ami
  instance_type = local.instance_type
  key_name = aws_key_pair.keypair.key_name

  vpc_security_group_ids = [ aws_security_group.web.id ]
  tag_specifications {
    resource_type = "instance"

    tags = {
      Name = "web-skills-ap-test"
    }
  }

  user_data = filebase64("${path.module}/test.sh")
}

resource "aws_security_group" "web" {
  name        = "web_sg"
  description = "Allow HTTP traffic"
  vpc_id      = aws_vpc.main.id

  ingress = [
		{
			from_port        = 22
			to_port          = 22
			protocol         = "tcp"
			security_groups = [ aws_security_group.bastion.id ]
		},
		{
			from_port        = 80
			to_port          = 80
			protocol         = "tcp"
			security_groups = [ aws_security_group.alb.id ]
		}
	]

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }
}

resource "aws_iam_role" "s3" {
  name = "S3ReadRole"

  assume_role_policy = jsonencode({
    Version = "2012-10-17"
    Statement = [
      {
        Action = "sts:AssumeRole"
        Effect = "Allow"
        Sid    = ""
        Principal = {
          Service = "ec2.amazonaws.com"
        }
      },
    ]
  })
}

resource "aws_iam_role_policy_attachment" "s3" {
  role       = aws_iam_role.s3.name
  policy_arn = "arn:aws:iam::aws:policy/AmazonS3ReadOnlyAccess"
}

resource "aws_iam_instance_profile" "s3" {
  name = "S3ReadRole"
  role = aws_iam_role.s3.name
}
